Done with assignment1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
-  </body>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    
+    <img
+  src="src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Its a bloody lion"
+  />
+  
+  <img
+  src="src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Its a bloody lion"
+  title="He is gonna eat you".
+  />
+  
+</body>
 </html>
